--- a/src/main/webapp/label/loginDialog.xhtml
+++ b/src/main/webapp/label/loginDialog.xhtml
@@ -52,7 +52,8 @@ Email: info@dpbennett.com.jm
                             redisplay="true"
                             toggleMask="true"
                             label="password"
-                            feedback="false" />               
+                            feedback="false" 
+                            required="true" />               
 
                 <f:facet name="footer">
                     <p:commandButton value="Login"
