--- a/src/main/webapp/label/loginDialog.xhtml
+++ b/src/main/webapp/label/loginDialog.xhtml
@@ -39,13 +39,13 @@ Email: info@dpbennett.com.jm
             <p:outputLabel id="loginMessage" 
                            value="#{energyLabelManager.logonMessage}" style="font-weight: bold" />
             <h:panelGrid columns="2" cellspacing="10">
-                <p:outputLabel for="username" value="Username" style="font-weight: bold" />
+                <p:outputLabel value="Username" style="font-weight: bold" />
                 <p:inputText value="#{energyLabelManager.username}"
                              id="username" 
                              required="true"
                              validatorMessage="Please enter a valid username" />
 
-                <p:outputLabel for="password" value="Password" style="font-weight: bold" />
+                <p:outputLabel value="Password" style="font-weight: bold" />
                 <p:password id="password"
                             value="#{energyLabelManager.password}"
                             maxlength="255" 
