--- a/src/main/webapp/label/labelDialog.xhtml
+++ b/src/main/webapp/label/labelDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 LabelPrint 
-Copyright (C) 2023  D P Bennett & Associates Limited
+Copyright (C) 2024  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -24,7 +24,7 @@ Email: info@dpbennett.com.jm
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />        
+        <ui:include src="../head.xhtml" />         
         <title>Energy Label</title>
         <script type="text/javascript" src="../js/javascripts.js" /> 
         <h:outputStylesheet library="webjars" name="primeflex/3.2.1/primeflex.min.css" />       
@@ -58,6 +58,11 @@ Email: info@dpbennett.com.jm
 
                 <p:toolbarGroup align="right">
 
+                    <h:outputText value="* Field required." 
+                                  style="font-weight: bold;" /> 
+
+                    <p:spacer width="10"/>
+
                     <p:commandButton value="Export"
                                      title="Export energy label image"
                                      update="label_growl"  
@@ -74,10 +79,6 @@ Email: info@dpbennett.com.jm
                        dynamic="false"
                        style="margin-top: 1px;margin-bottom: 1px;"
                        widgetVar="labelFormTabVar" >
-
-                <p:ajax event="tabChange" global="false" 
-                        update=":labelForm"
-                        listener="#{energyLabelManager.onLabelDialogTabChange}"/> 
 
                 <p:tab title="General">
                     <h:panelGrid columns="2" cellspacing="10">
@@ -133,7 +134,7 @@ Email: info@dpbennett.com.jm
                                     process="@this"/>
 
                         </p:inputText>
-                        
+
                         <h:outputLabel value="Serial number" for="serialNumber" />        
                         <p:inputText value="#{energyLabelManager.selectedEnergyLabel.serialNumber}"
                                      id="serialNumber" >
@@ -429,7 +430,7 @@ Email: info@dpbennett.com.jm
                 <p:toolbarGroup align="left">
                     <p:commandButton value="Save"
                                      actionListener="#{energyLabelManager.saveEnergyLabel}"
-                                     update=":labelForm:topToolbar"     
+                                     update=":labelForm"     
                                      process="@form"
                                      icon="pi pi-check"/>
 
