--- a/src/main/webapp/label/systemOptionsTab.xhtml
+++ b/src/main/webapp/label/systemOptionsTab.xhtml
@@ -79,7 +79,7 @@ Email: info@dpbennett.com.jm
                     <p:outputLabel value="#{systemOption.comments}" />
                 </f:facet>
                 <f:facet name="input">
-                    <p:inputText value="#{systemOption.comments}" style="width:96%"/>
+                    <p:inputText value="#{systemOption.comments}"/>
                 </f:facet>
             </p:cellEditor>                                           
         </p:column>   
@@ -90,10 +90,10 @@ Email: info@dpbennett.com.jm
             </f:facet>
             <p:cellEditor>
                 <f:facet name="output"> 
-                    <p:outputLabel value="#{systemOption.name}" />
+                    <p:outputLabel value="#{systemOption.name}"/>
                 </f:facet>
                 <f:facet name="input">
-                    <p:inputText value="#{systemOption.name}" style="width:96%"/>
+                    <p:inputText value="#{systemOption.name}"/>
                 </f:facet>
             </p:cellEditor>                                         
         </p:column>   
@@ -107,14 +107,14 @@ Email: info@dpbennett.com.jm
                     <p:outputLabel value="#{systemOption.optionValueDisplay}" />
                 </f:facet>
                 <f:facet name="input">
-                    <p:inputText value="#{systemOption.optionValue}" style="width:96%"/>
+                    <p:inputText value="#{systemOption.optionValue}"/>
                 </f:facet>
             </p:cellEditor>                                         
         </p:column>    
 
         <p:column>
             <p:commandButton title="View or edit system option"   
-                             actionListener="#{systemManager.editSystemOption}"
+                             actionListener="#{systemManager.editSystemOption('/admin/systemOptionDialog')}"
                              global="true"
                              process="@this"
                              icon="pi pi-pencil">
