--- a/src/main/webapp/loginDialog.xhtml
+++ b/src/main/webapp/loginDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 LabelPrint (LP) 
-Copyright (C) 2023  D P Bennett & Associates Limited
+Copyright (C) 2024  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -30,7 +30,7 @@ Email: info@dpbennett.com.jm
               modal="true"
               visible="#{!energyLabelManager.userLoggedIn}"              
               widgetVar="loginDialog"
-              width="375"
+              width="auto"
               closable="false"
               resizable="false">
 
@@ -51,14 +51,14 @@ Email: info@dpbennett.com.jm
                             maxlength="255" 
                             redisplay="true"
                             toggleMask="true"
+                            required="true"
                             label="password"
-                            feedback="false" 
-                            required="true" />               
+                            feedback="false" />               
 
                 <f:facet name="footer">
                     <p:commandButton value="Login"
                                      icon="pi pi-sign-in"    
-                                     update="loginForm"                                                                                                            
+                                     update="loginForm,:appForm"                                                                                                            
                                      global="true"
                                      oncomplete="window.location.reload();"
                                      process="@form"
