--- a/src/main/webapp/label/labelPrintOptionsTab.xhtml
+++ b/src/main/webapp/label/labelPrintOptionsTab.xhtml
@@ -37,7 +37,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="dialogReturn" 
                         listener="#{systemManager.doSystemOptionSearch('LabelPrint')}"
-                        update=":appForm:mainTabView:labelPrintOptionsTable"/>
+                        update=":mainTabViewForm:mainTabView:labelPrintOptionsTable"/>
 
             </p:commandButton>
             <p:spacer width="20" />
@@ -46,7 +46,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="keyup"
                         global="false"
-                        update=":appForm:mainTabView:labelPrintOptionsTable"
+                        update=":mainTabViewForm:mainTabView:labelPrintOptionsTable"
                         listener="#{systemManager.doSystemOptionSearch('LabelPrint')}"
                         process="@this"/>
 
@@ -123,7 +123,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="dialogReturn"
                         listener="#{systemManager.doSystemOptionSearch('LabelPrint')}"
-                        update=":appForm:mainTabView:labelPrintOptionsTable"/>
+                        update=":mainTabViewForm:mainTabView:labelPrintOptionsTable"/>
 
             </p:commandButton>           
         </p:column>
