--- a/src/main/webapp/menubar.xhtml
+++ b/src/main/webapp/menubar.xhtml
@@ -38,7 +38,7 @@ Email: info@dpbennett.com.jm
                         process="@this" >
 
                 <p:ajax event="dialogReturn" 
-                        update=":appForm:mainTabView"
+                        update=":mainTabViewForm:mainTabView"
                         listener="#{energyLabelManager.energyLabelDialogReturn}" />
 
             </p:menuitem>  
