--- a/src/main/webapp/label/energyEfficiencyOptionsTab.xhtml
+++ b/src/main/webapp/label/energyEfficiencyOptionsTab.xhtml
@@ -37,7 +37,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="dialogReturn" 
                         listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
-                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"/>
+                        update=":mainTabViewForm:mainTabView:energyEfficiencyOptionsTable"/>
 
             </p:commandButton>
             <p:spacer width="20" />
@@ -46,7 +46,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="keyup"
                         global="false"
-                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"
+                        update=":mainTabViewForm:mainTabView:energyEfficiencyOptionsTable"
                         listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
                         process="@this"/>
 
@@ -122,7 +122,7 @@ Email: info@dpbennett.com.jm
 
                 <p:ajax event="dialogReturn"
                         listener="#{systemManager.doSystemOptionSearch('Energy Efficiency')}"
-                        update=":appForm:mainTabView:energyEfficiencyOptionsTable"/>
+                        update=":mainTabViewForm:mainTabView:energyEfficiencyOptionsTable"/>
 
             </p:commandButton>           
         </p:column>
