--- a/src/main/webapp/loginDialog.xhtml
+++ b/src/main/webapp/loginDialog.xhtml
@@ -1,6 +1,6 @@
 <!--
 LabelPrint (LP) 
-Copyright (C) 2024  D P Bennett & Associates Limited
+Copyright (C) 2025  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -58,7 +58,7 @@ Email: info@dpbennett.com.jm
                 <f:facet name="footer">
                     <p:commandButton value="Login"
                                      icon="pi pi-sign-in"    
-                                     update="loginForm,:appForm"                                                                                                            
+                                     update="loginForm"                                                                                                            
                                      global="true"
                                      oncomplete="window.location.reload();"
                                      process="@form"
